--- a/styles/less/mixins/grid.less
+++ b/styles/less/mixins/grid.less
@@ -4,6 +4,8 @@
 
 .grid-column
 {
+	width: 100%;
+    height: 100%;
 	display: -webkit-flex;
 	display: flex;
     -webkit-flex-flow: column wrap;
@@ -28,6 +30,10 @@
       box-sizing: border-box;
       .fill-area();
   }
+
+  .h-@{index}-offset {
+      margin-top: @index/@total*100vh;
+  }
   
   // next iteration
   .loop-grid-heights((@index - 1), @total);
@@ -39,11 +45,12 @@
 
 .grid-row
 {
-    display: -webkit-flex;
+    width: 100%;
+    height: 100%;
+	display: -webkit-flex;
     display: flex;
     -webkit-flex-flow: row wrap;
     flex-flow: row wrap;
-    height: 100%;
         
     &.grid-gutters
     {
@@ -62,6 +69,10 @@
       width: @index/@total*100vw;
       box-sizing: border-box;
       .fill-area();
+  }
+
+  .w-@{index}-offset {
+      margin-left: @index/@total*100vw;
   }
   
   // next iteration
