--- a/examples/styles/less/demo3.less
+++ b/examples/styles/less/demo3.less
@@ -16,4 +16,11 @@ body
     padding: .5em;
     border-radius: 5px;
     text-align: center;
+    span
+    {
+	    -webkit-transform: rotate(270deg);
+	    -moz-transform: rotate(270deg);
+	    -o-transform: rotate(270deg);
+	    writing-mode: lr-tb;
+    }
 }
