--- a/styles/less/mixins/grid.less
+++ b/styles/less/mixins/grid.less
@@ -2,7 +2,7 @@
 
 // Vertical grid
 
-.grid-column
+.rows
 {
 	width: 100%;
     height: 100%;
@@ -11,9 +11,9 @@
     -webkit-flex-flow: column wrap;
     flex-flow: column wrap;
         
-    &.grid-gutters
+    &.with-gutters
     {
-        [class^="h-"], [class*=" h-"]
+        [class^="row-"], [class*=" row-"]
         {
             padding: @grid-gutter-height/2 0;            
         }
@@ -25,13 +25,13 @@
 
 .loop-grid-heights(@index, @total:@index) when (@index > 0) {
 
-  .h-@{index} {
+  .row-@{index} {
       height: @index/@total*100vh;
       box-sizing: border-box;
       .fill-area();
   }
 
-  .h-@{index}-offset {
+  .row-@{index}-offset {
       margin-top: @index/@total*100vh;
   }
   
@@ -43,7 +43,7 @@
 
 // horizontal grid
 
-.grid-row
+.columns
 {
     width: 100%;
     height: 100%;
@@ -52,9 +52,9 @@
     -webkit-flex-flow: row wrap;
     flex-flow: row wrap;
         
-    &.grid-gutters
+    &.with-gutters
     {
-        [class^="w-"], [class*=" w-"]
+        [class^="col-"], [class*=" col-"]
         {
             padding: 0 @grid-gutter-width/2;            
         }
@@ -65,13 +65,13 @@
 
 .loop-grid-widths(@index, @total:@index) when (@index > 0) {
 
-  .w-@{index} {
+  .col-@{index} {
       width: @index/@total*100vw;
       box-sizing: border-box;
       .fill-area();
   }
 
-  .w-@{index}-offset {
+  .col-@{index}-offset {
       margin-left: @index/@total*100vw;
   }
   
