--- a/styles/less/mixins/grid.less
+++ b/styles/less/mixins/grid.less
@@ -13,7 +13,7 @@
         
     &.with-gutters
     {
-        [class^="row-"], [class*=" row-"]
+        > [class^="row-"], [class*=" row-"]
         {
             padding: @grid-gutter-height/2 0;            
         }
@@ -54,7 +54,7 @@
         
     &.with-gutters
     {
-        [class^="col-"], [class*=" col-"]
+        > [class^="col-"], [class*=" col-"]
         {
             padding: 0 @grid-gutter-width/2;            
         }
